--- a/views/suppliers/index.ejs
+++ b/views/suppliers/index.ejs
@@ -1,5 +1,126 @@
 <%-  include('../partials/header.ejs') %>
 
-<h2>Fornecedores</h2>
+    <h2 class='mb-4'>Gerenciamento de Fornecedores</h2>
+    
+    
+        <form  action="adicionarFornecedor" method="post" accept-charset="utf-8">
+            <style>
+                tr, td {
+                        border: none;
+                        }
+           </style>
+
+            <table id="principal" border="0px" width="100%">
+
+    <tr>
+        <td><b>Adicionar Fornecedores</b></td>
+           <td>&nbsp;</td> 
+    </tr>
+
+    <tr>
+<td class="col-md-10"><input type="text" name="nome1" class="form-control" id="inputEmail4" required placeholder="Informe o nome do fornecedor" /> </td>
+
+    </tr>
+</table>
+            
+            <button type="button" class="btn btn-secondary" onclick="adicionarParcela()">+</button>
+            <button type="submit" class="btn btn-info">Cadastrar</button>
+            <script>				
+             let count = 2;
+                function adicionarParcela() {
+
+                    $('#principal').append(
+                            "<tr><td class='col-md-3'><input type='text' name='nome" + count + "' class='form-control' id='inputEmail4' required placeholder='Informe o nome do fornecedor' /></td>" +
+                            "<td class='col-md-2'><button type='button' class='btn btn-danger btn-sm'>Excluir</button></td></tr>");
+                        count++;
+                }
+
+                $('#principal').on('click', 'button', function () {
+                    var td = $(this).parent();
+                    var tr = $(td).parent();
+                    count--;
+                    tr.remove();
+            
+                });
+
+            </script>
+        </form>
+    
+    
+    
+    
+    <br>
+    <table id="example" class="table table-striped table-bordered"
+        style="width: 100%">
+
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>CNPJ</th>
+                <th>Nome</th>
+                <th>Excluir</th>
+            </tr>
+        </thead>
+        <tbody>
+            
+            
+               <% suppliers.forEach(supplier => { %>
+             
+                <tr>
+                    <td> <%= supplier.id %> </td> 
+                    <td> <%= supplier.cnpj %> </td> 
+                    <td> <%= supplier.name %> </td> 
+                    <td><a href="#"> <button ><i class="fa fa-trash-o"></i></button> </a></td>      	
+                </tr>      
+                
+             <%  }); %>
+    
+              
+            
+            
+        </tbody>
+    </table>
+</div>
+    </div>
+
+  
+
+
+<script type="text/javascript">
+
+var table = new DataTable('#example', {
+    language: {
+        url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+    },
+    
+    order: 'desc'
+});
+    
+</script>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="informacao" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modal-content">
+  <div class="modal-header">
+    <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+   <p>teste</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" id="close" data-dismiss="modal">Close</button>
+   <!--  <button type="button" class="btn btn-primary">Save changes</button>       -->
+  </div>
+</div>
+</div>
+
+
+
 
 <%- include('../partials/footer.ejs') %>
