--- a/views/dashboard/pending.ejs
+++ b/views/dashboard/pending.ejs
@@ -1,8 +1,10 @@
 <%- include('../partials/header.ejs') %>
 
-<% if(message) { console.log(message) %>
+<% if(message) {  %>
   <script>
-    alert("<%=message%>");
+       $(document).ready(function() {
+         $('#message').modal('show');
+      });
   </script>
   <% } %>
 
@@ -94,4 +96,28 @@
 
     </script>
   </div>
+
+  <!-- Modal -->
+          <div class="modal fade" id="message" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <%= message %>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
   <%- include('../partials/footer.ejs') %>
