--- a/views/payments/index.ejs
+++ b/views/payments/index.ejs
@@ -3,9 +3,11 @@
 
 
 
-<% if(message) { console.log(message) %>
+<% if(message) {  %>
   <script>
-    alert("<%=message%>");
+       $(document).ready(function() {
+         $('#message').modal('show');
+      });
   </script>
   <% } %>
 
@@ -13,7 +15,7 @@
 
 
 <h2 class='mb-4'>Autorização de Pagamentos Diversos</h2>
-<form action="/upload/payments" method="post" enctype="multipart/form-data" accept-charset="utf-8">
+<form id="payment" action="/upload/payments" method="post" enctype="multipart/form-data" accept-charset="utf-8">
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputText">Fornecedor</label>
@@ -187,5 +189,62 @@
 </form>
 </div>
 </div>
+
+
+
+<script type="text/javascript">
+
+  $("#payment").submit(function(){
+        
+    $(document).ready(function() {
+         $('#loadingModal').modal('show');
+      })	
+    });
+  
+  
+  </script>
+
+
+			    <!-- Modal -->
+          <div class="modal fade" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  Aguarde...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          
+			    <!-- Modal -->
+          <div class="modal fade" id="message" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <%= message %>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
 
 <%- include('../partials/footer.ejs') %>
