--- a/views/purchaseAndServices/index.ejs
+++ b/views/purchaseAndServices/index.ejs
@@ -1,9 +1,11 @@
 <%- include('../partials/header.ejs') %>
   
 
-<% if(message) { console.log(message) %>
+<% if(message) {  %>
   <script>
-    alert("<%=message%>");
+       $(document).ready(function() {
+         $('#message').modal('show');
+      });
   </script>
   <% } %>
 
@@ -13,7 +15,7 @@
       <h2>Solicitação de Compras e Serviços</h2>
     </div>
 
-    <form action="/upload/purchases" method="post" enctype="multipart/form-data" accept-charset="utf-8" style="border: 1px solid #000; padding: 40px 15px 10px 20px;">
+    <form id="purchase" action="/upload/purchases" method="post" enctype="multipart/form-data" accept-charset="utf-8" style="border: 1px solid #000; padding: 40px 15px 10px 20px;">
 
 
       <table id="principal" border="0px" width="100%">
@@ -79,4 +81,64 @@
     </form>
   </div>
   </div>
+
+  <script type="text/javascript">
+
+    $("#purchase").submit(function(){
+          
+      $(document).ready(function() {
+           $('#loadingModal').modal('show');
+        })	
+      });
+    
+    
+    </script>
+  
+  
+            <!-- Modal -->
+            <div class="modal fade" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    Aguarde...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+  
+            
+            <!-- Modal -->
+            <div class="modal fade" id="message" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <%= message %>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+
+
+
+
   <%- include('../partials/footer.ejs') %>
