--- a/views/registrationsToken/index.ejs
+++ b/views/registrationsToken/index.ejs
@@ -2,7 +2,7 @@
 
 <h2>Gerar Token</h2>
 
-<form action="/generate_token" method="post">
+<form id="form" action="/generate_token" method="post">
   <div class="form-row">
     <div class="form-group col-md-4">
       <label for="inputState">Tipo usuário:</label>
@@ -24,12 +24,67 @@
 
 <hr>
 
-<% if(message) { console.log(message) %>
+<% if(message) {  %>
   <script>
-    alert("<%=message%>");
+       $(document).ready(function() {
+         $('#message').modal('show');
+      });
   </script>
   <% } %>
 
+
+  <script type="text/javascript">
+
+    $("#form").submit(function(){
+          
+      $(document).ready(function() {
+           $('#loadingModal').modal('show');
+        })	
+      });
+    
+    
+    </script>
+  
+
+  <!-- Modal -->
+  <div class="modal fade" id="message" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <%= message %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Aguarde, gerando token...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 <%- include('../partials/footer.ejs') %>
