--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,9 +1,11 @@
 <%-  include('../partials/header.ejs') %>
 
     
-<% if(message) { console.log(message) %>
+<% if(message) {  %>
     <script>
-      alert("<%=message%>");
+         $(document).ready(function() {
+           $('#message').modal('show');
+        });
     </script>
     <% } %>
 
@@ -80,25 +82,25 @@ var table = new DataTable('#example', {
 
 
 
-<!-- Modal -->
-<div class="modal fade" id="informacao" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-<div class="modal-dialog modal-dialog-centered" role="document">
-<div class="modal-content">
-  <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-   <p>teste</p>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" id="close" data-dismiss="modal">Close</button>
-   <!--  <button type="button" class="btn btn-primary">Save changes</button>       -->
-  </div>
-</div>
-</div>
+			    <!-- Modal -->
+                <div class="modal fade" id="message" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                          <%= message %>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
 
 
