--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -213,11 +213,13 @@
 
 <body className='snippet-body'>
 
-  <% if(message) { console.log(message) %>
-  <script>
-    alert("<%=message%>");
-  </script>
-  <% } %>
+  <% if(message) {  %>
+    <script>
+         $(document).ready(function() {
+           $('#message').modal('show');
+        });
+    </script>
+    <% } %>
 
   <div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
     <div class="card card0 border-0">
@@ -298,3 +300,24 @@
       </div>
     </div>
   </div>
+
+
+  		    <!-- Modal -->
+          <div class="modal fade" id="message" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <%= message %>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
