--- a/views/payments/index.ejs
+++ b/views/payments/index.ejs
@@ -1,8 +1,5 @@
 <%- include('../partials/header.ejs') %>
 
-
-
-
   <% if(message) { %>
     <script>
       $(document).ready(function () {
@@ -10,8 +7,6 @@
       });
     </script>
     <% } %>
-
-
 
       <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
       <div class="sobreposicaoForm">
@@ -67,10 +62,23 @@
             </script>
           </div>
         </div>
+
+        <div class="form-group">
+          <label for="exampleFormControlSelect1">Condições de Pagamento</label>
+          <select id="condicaoPagamento" name="payment_condition" class="form-control" id="exampleFormControlSelect1" required>
+            <option value="" disabled="disabled" selected="selected" required>Selecione a condição de pagamento</option>
+            <option value="Avista">À vista</option>
+            <option value="Aprazo">À Prazo</option>
+          </select>
+        </div>
+        <div id="qtdParcelas">
+
+        </div>
+
         <div class="form-group">
           <label for="exampleFormControlSelect1">Formas de Pagamento</label>
           <select id="sl" class="form-control" id="exampleFormControlSelect1" required>
-            <option value="" disabled="disabled" selected="selected" required>Selecione o tipo de pagamento</option>
+            <option value="" disabled="disabled" selected="selected" required>Selecione a forma de pagamento</option>
             <option value="Boleto">Boleto</option>
             <option value="Avista">À vista</option>
             <option value="Deposito">Depósito</option>
@@ -87,6 +95,20 @@
 
         <script type="text/javascript">
           $.jMaskGlobals.watchDataMask = true;
+
+          $("#condicaoPagamento").on("change", function () {
+            var valor = $(this).val(); // aqui vc pega cada valor selecionado com o this
+            if (valor == "Aprazo") {
+              document.getElementById("qtdParcelas").innerHTML = "";
+              document.getElementById("qtdParcelas").innerHTML = "" +
+                "<div class='form-group col-md-3'>\n" +
+                "<label for='inputText'>Parcelas</label>\n" +
+                "<input type='number' min=1 name='amount_parcelable' class='form-control' id='inputEmail4' required placeholder='0'/> " +
+                "</div>\n";
+                }else if( valor == "Avista"){
+                  document.getElementById("qtdParcelas").innerHTML = "";
+                }
+              });
 
           $("#sl").on("change", function () {
             var valor = $(this).val(); // aqui vc pega cada valor selecionado com o this
@@ -185,7 +207,7 @@
 
             }
 
-          })
+          });
         </script>
         <hr style="width: 90%;">
         <input type="file" name="files" size="50" accept="image/jpeg,image/png,image/jpg,application/pdf" multiple required />
